Update subtree paint properties when preserve-3d changes

BUG=701878
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2749403004
Cr-Commit-Position: refs/heads/master@{#457301}

Former-commit-id: 1533215983ea3066ce9060cd6fdef87dc8f452ca